opensearch python logging

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /cloudlines-blog-resources.iml
 .tfsec/
 .ipynb_checkpoints/
-/masterarbeit_repos/repositories/
+**/.terraform/
+**/*.zip
+**/terraform.tfstate*
